# cookiecutters-webstep

./: README.md
python-pyenv-poetry-qa/: .gitignore  cookiecutter.json
python-pyenv-poetry-qa/hooks/: post_gen_project.py  pre_gen_project.py
python-pyenv-poetry-qa/{{cookiecutter.project_slug}}/: .gitignore  README.md  bitbucket-pipelines.yml  pyproject.toml  qa.sh
python-pyenv-poetry-qa/{{cookiecutter.project_slug}}/tests/: test_dummy.py
python-pyenv-poetry-qa/{{cookiecutter.project_slug}}/{{cookiecutter.package_slug}}/: __init__.py
