[tool.poetry]
name = "{{ cookiecutter.package_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.782"
pydocstyle = "^5.0.2"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"

[tool.black]
line-length = 172

[tool.pylint.messages_control]
# C0330 and C0326 collide with black, C0116 is picked up by pydocstyle
disable = ["C0330", "C0326", "C0116"]

[tool.pylint.format]
max-line-length = "172"

[tool.isort]
# black compatible settings
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 172

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
